--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   .card{
     display:flex; flex-direction:column;
     background:var(--card);border:1px solid var(--border);border-radius:16px;padding:12px;box-shadow:var(--shadow);transition:.2s;
-    min-height:600px; /* אחיד ונעים */
+    min-height:620px;
   }
   .card:hover{transform:translateY(-3px);box-shadow:0 12px 24px rgba(32,18,0,.08)}
 
@@ -66,11 +66,12 @@
   .imagebox{position:relative;border-radius:12px;overflow:hidden;background:#f1f1f1;height:240px}
   .slide{position:absolute;inset:0;opacity:0;transition:opacity .25s;z-index:1}
   .slide.active{opacity:1}
-  .slide img{width:100%;height:100%;object-fit:cover;display:block}
+  .slide img{width:100%;height:100%;object-fit:cover;display:block;cursor:zoom-in}
   .badge{position:absolute;top:10px;inset-inline-start:10px;background:#000a;color:#fff;font-size:12px;padding:4px 8px;border-radius:999px;backdrop-filter:blur(2px)}
-  .cnav{position:absolute;inset:0;display:flex;align-items:center;justify-content:space-between;padding:0 8px;direction:ltr;z-index:3}
-  .cbtn{width:40px;height:40px;border-radius:999px;border:1px solid var(--border);background:#fff9f0;display:flex;align-items:center;justify-content:center;box-shadow:var(--shadow);cursor:pointer}
-  .cbtn svg{width:18px;height:18px}
+  .cnav{position:absolute;inset:0;display:flex;align-items:center;justify-content:space-between;padding:0 6px;direction:ltr;z-index:3;pointer-events:none}
+  .cbtn{width:28px;height:28px;border-radius:999px;border:1px solid var(--border);background:#fff9f0;display:flex;align-items:center;justify-content:center;box-shadow:var(--shadow);opacity:.9}
+  .cbtn svg{width:14px;height:14px}
+  .cbtn,.cbtn *{pointer-events:auto;cursor:pointer}
   .imagebox.single .cnav{display:none}
   .placeholder{position:absolute;inset:0;display:flex;align-items:center;justify-content:center;color:#b9a98f;font-weight:700;z-index:0}
 
@@ -78,11 +79,11 @@
   .meta-row{display:flex;gap:8px;align-items:center;justify-content:center;margin:var(--s-2) 0 var(--s-2)}
   .tag{display:inline-flex;gap:6px;align-items:center;padding:4px 10px;border:1px dashed var(--border);border-radius:999px;font-size:12px;color:var(--muted);background:#fff}
 
-  /* כותרת – שתי שכבות עם clamp נפרד וריווח בריא */
+  /* כותרת – 3 שכבות: שם | בהשראת | מין */
   .title{
-    margin:var(--s-2) 0 calc(var(--s-3) + 8px);
+    margin:var(--s-2) 0 calc(var(--s-3) + 10px);
     text-align:center; display:flex; flex-direction:column; justify-content:center; align-items:center;
-    min-height:5.8em; gap:6px;
+    min-height:7.6em; gap:6px;
   }
   .t1{
     font-weight:800; font-size:clamp(15px, 2.1vw, 18px); line-height:1.35;
@@ -92,6 +93,7 @@
     font-weight:600; font-size:clamp(13px, 1.7vw, 15px); line-height:1.35; color:var(--muted);
     display:-webkit-box; -webkit-line-clamp:2; -webkit-box-orient:vertical; overflow:hidden; max-height:2.8em;
   }
+  .t3{ font-weight:600; font-size:13px; color:var(--muted); }
   .t2 .insp{color:var(--accent);font-weight:800}
   .t2 .sep{color:var(--muted);font-weight:600}
 
@@ -121,6 +123,18 @@
   .toast.show{opacity:1;transform:translateY(0)}
 
   .empty{text-align:center;color:var(--muted);padding:20px 0;font-weight:700}
+
+  /* מובייל – בלי לשנות דסקטופ */
+  @media (max-width:520px){
+    .imagebox{height:220px}
+    .cbtn{width:26px;height:26px}
+    .cbtn svg{width:13px;height:13px}
+    .title{min-height:8.2em}
+    .t1{font-size:15.5px}
+    .t2{font-size:13.5px}
+    .t3{font-size:12.5px}
+    .card{min-height:610px}
+  }
 </style>
 </head>
 <body>
@@ -181,28 +195,53 @@
 
   <footer class="wrap"><div>© 2025 שם המותג • הזמנה דרך WhatsApp בלבד • פרטי קשר: example@mail.com • 050-0000000</div></footer>
 
+<!-- מודאל זום -->
+<div id="lightbox" style="position:fixed;inset:0;background:rgba(0,0,0,.7);display:none;align-items:center;justify-content:center;z-index:9999;">
+  <div style="position:relative;max-width:95vw;max-height:90vh;display:flex;flex-direction:column;gap:10px;align-items:center;">
+    <img id="lb-img" alt="" style="max-width:95vw;max-height:80vh;object-fit:contain;transform-origin:center center;"/>
+    <div style="display:flex;gap:8px;">
+      <button id="lb-zoom-in"  style="padding:8px 12px;border-radius:10px;border:1px solid #eee;background:#fff">+</button>
+      <button id="lb-zoom-out" style="padding:8px 12px;border-radius:10px;border:1px solid #eee;background:#fff">−</button>
+      <button id="lb-reset"    style="padding:8px 12px;border-radius:10px;border:1px solid #eee;background:#fff">איפוס</button>
+      <button id="lb-close"    style="padding:8px 12px;border-radius:10px;border:1px solid #eee;background:#fff">סגור</button>
+    </div>
+  </div>
+</div>
+
 <script>
 const WA_PHONE = "972508939729";
 const CSV_URL  = "data/perfumes.csv";
 
-/* ---- utils ---- */
+/* ---------- utils ---------- */
 function round5(x){ return Math.round(x/5)*5; }
 function hashNum(str){ let h=0; for(let i=0;i<str.length;i++) h=((h<<5)-h)+str.charCodeAt(i)|0; return (Math.abs(h)%1000)/1000; }
 function deriveBasePrice100(slug){ return round5(170 + hashNum(slug)*70); }
 function derive10ml(p100){ return Math.max(35, round5(p100*0.32)); }
 function derive5ml(p100){ return Math.max(20, round5(p100*0.18)); }
 
+/* slug ASCII (כמו קודם) */
 function slugify(s){
   if(!s) return "";
-  const from="ÁÀÂÄÃÅáàâäãåÉÈÊËéèêëÍÌÎÏíìîïÓÒÔÖÕóòôöõÚÙÛÜúùûüÇçÑñŸÿŽžŠš";
-  const to  ="AAAAAAaaaaaaEEEEeeeeIIIIiiiiOOOOOoooooUUUUuuuuCcNnYyZzSs";
+  const from="ÁÀÂÄÃÅáàâäãåÉÈÊËéèêëÍÌÎÏíìîïÓÒÔÖÕóòôöõÚÙÛÜúùûüÇçÑñŸÿŽžŠš’‘“”";
+  const to  ="AAAAAAaaaaaaEEEEeeeeIIIIiiiiOOOOOoooooUUUUuuuuCcNnYyZzSs----";
   let out=s;
   for(let i=0;i<from.length;i++){ out=out.replaceAll(from[i],to[i]); }
   out = out.normalize?.("NFKD").replace(/[\u0300-\u036f]/g,"") || out;
-  out = out.toLowerCase().replace(/['\"’`´]/g,"").replace(/[^a-z0-9]+/g,"-").replace(/-+/g,"-").replace(/^-|-$/g,"");
+  out = out.toLowerCase().replace(/['\"`´]/g,"").replace(/[^a-z0-9]+/g,"-").replace(/-+/g,"-").replace(/^-|-$/g,"");
   return out;
 }
+/* rawSlug יוניקוד – משאיר é, ’ ו- . */
+function rawSlug(s){
+  if(!s) return "";
+  return s.trim()
+    .toLowerCase()
+    .replace(/\s+/g,"-")                 // רווחים → מקף
+    .replace(/[\/\\]/g,"-")              // בלי סלשים
+    .replace(/-{2,}/g,"-")               // מקפים כפולים
+    .replace(/^-|-$/g,"");               // בלי מקפים בקצוות
+}
 
+/* טוסט */
 function showToast(msg, nearEl){
   const t=document.createElement('div'); t.className='toast'; t.textContent=msg; document.body.appendChild(t);
   const r=nearEl.getBoundingClientRect();
@@ -211,7 +250,7 @@ function showToast(msg, nearEl){
   setTimeout(()=>{t.classList.remove('show'); setTimeout(()=>t.remove(),200);},1600);
 }
 
-/* ---- CSV ---- */
+/* ---------- CSV ---------- */
 async function loadCSV(url){
   const res = await fetch(url, {cache:"no-store"});
   if(!res.ok){ console.error("CSV fetch failed", res.status); return {headers:[],rows:[]}; }
@@ -242,7 +281,7 @@ async function loadCSV(url){
   return {headers,rows};
 }
 
-/* ---- parse long title ---- */
+/* ---------- ניתוח הכותרת הארוכה ---------- */
 const BRAND_ALIASES = [
   "Thomas Kosmala","Xerjoff","Ex Nihilo","By Kilian","Kilian","Tom Ford","Gucci","Prada",
   "Narciso Rodriguez","Parfums De Marly","Parfums de Marly","Carolina Herrera","Jean Paul Gaultier",
@@ -253,8 +292,8 @@ const BRAND_ALIASES = [
 
 function normalizeBrand(raw){
   if(!raw) return "";
-  const s = raw.trim().replace(/^By\s+/i,""); // הסר "By " בהתחלה
-  if(/By\s+Kilian/i.test(raw) || /^Kilian$/i.test(s)) return "Kilian"; // By Kilian → Kilian
+  let s = raw.trim().replace(/^By\s+/i,"");
+  if(/By\s+Kilian/i.test(raw) || /^Kilian$/i.test(s)) s = "Kilian";
   return s;
 }
 
@@ -290,7 +329,6 @@ function parseFromLongTitle(longTitle){
       const productRaw = inspStr.replace(new RegExp(found,"i"),"").replace(/\b[Bb]y\b/,"").trim();
       inspProduct = productRaw;
     }else{
-      // אין זיהוי – נשתמש בכל השרשרת כמוצר, והמותג ריק
       inspProduct = inspStr;
     }
   }
@@ -302,20 +340,22 @@ function parseFromLongTitle(longTitle){
   return {dupeName, dupeTitle, inspBrand, inspProduct, inspStr, gender, genderText: rightPart, longTitle:norm};
 }
 
-/* ---- carousel with smart candidates & reliable loading ---- */
+/* ---------- קרוסלה: בניית מועמדים לשמות קבצים ---------- */
 function candidateBasesForDupe(dupeName, dupeTitle){
-  const a = slugify(dupeName);
-  const b = slugify(dupeTitle);
-  const set = new Set([a,b].filter(Boolean));
-  return Array.from(set).map(s=>`images/${s}`);
+  const set = new Set();
+  const R = v=>{ if(v) { set.add(`images/${slugify(v)}`); set.add(`images/${rawSlug(v)}`); } };
+  R(dupeName); R(dupeTitle);
+  return Array.from(set);
 }
 function candidateBasesForInsp(inspBrand,inspProduct,inspStr){
-  const list=[];
-  const bp = slugify(`${inspBrand} ${inspProduct}`.trim());
-  const justStr = slugify(inspStr);
-  if(bp) list.push(bp);
-  if(justStr && justStr!==bp) list.push(justStr);
-  return Array.from(new Set(list)).map(s=>`images/${s}`);
+  const set = new Set();
+  const both1 = `${inspBrand||""} ${inspProduct||""}`.trim();
+  const both2 = `${inspProduct||""} ${inspBrand||""}`.trim();
+  const firstBrandWord = (inspBrand||"").split(/\s+/)[0]||"";
+  const prodPlusFirstBrand = `${inspProduct||""} ${firstBrandWord}`.trim();
+  const add = v=>{ if(v){ set.add(`images/${slugify(v)}`); set.add(`images/${rawSlug(v)}`); } };
+  add(both1); add(both2); add(prodPlusFirstBrand); add(inspStr);
+  return Array.from(set);
 }
 function tryLoadOne(img, base, cbOk, cbFail){
   const exts=[".jpg",".jpeg",".png",".webp"]; let i=0;
@@ -339,7 +379,7 @@ function buildCarousel(container, p){
     function tryNextBase(){
       if(j>=cands.length){ s.dataset.missing="1"; return; }
       const base=cands[j++];
-      tryLoadOne(img, base, ()=>{ s.dataset.loaded="1"; loadedSlides.push(s); activate(); }, tryNextBase);
+      tryLoadOne(img, base, ()=>{ s.dataset.loaded="1"; loadedSlides.push(s); activate(); bindZoom(img); }, tryNextBase);
     }
     tryNextBase();
     holders.push(s);
@@ -348,8 +388,7 @@ function buildCarousel(container, p){
   addWithCandidates("מוצר", dupeCands);
   addWithCandidates("השראה", inspCands);
 
-  // placeholder אם אין כלום
-  const ph=document.createElement('div'); ph.className='placeholder'; ph.textContent='הוסיפו תמונות ל/images/ בשם ה-slug המתאים'; container.appendChild(ph);
+  const ph=document.createElement('div'); ph.className='placeholder'; ph.textContent='הוסיפו תמונות ל/images/ בשם המתאים (עם או בלי ניקוד)'; container.appendChild(ph);
 
   const nav=document.createElement('div'); nav.className='cnav';
   nav.innerHTML=`<button class="cbtn prev" aria-label="הקודם"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polyline points="15 18 9 12 15 6"></polyline></svg></button>
@@ -372,11 +411,27 @@ function buildCarousel(container, p){
   nav.querySelector('.prev').addEventListener('click',()=>goto(idx-1));
   nav.querySelector('.next').addEventListener('click',()=>goto(idx+1));
 
-  // דיבאג לקונסול — לראות אילו שמות ניסינו
   console.debug("IMAGE CANDIDATES:", {dupe:dupeCands, insp:inspCands});
 }
 
-/* ---- WhatsApp ---- */
+/* ---------- Lightbox / Zoom ---------- */
+const lb = document.getElementById('lightbox');
+const lbImg = document.getElementById('lb-img');
+const lbIn  = document.getElementById('lb-zoom-in');
+const lbOut = document.getElementById('lb-zoom-out');
+const lbReset = document.getElementById('lb-reset');
+const lbClose = document.getElementById('lb-close');
+let lbScale=1;
+function openLB(src){ lbImg.src=src; lbScale=1; lbImg.style.transform=`scale(${lbScale})`; lb.style.display='flex'; document.body.style.overflow='hidden'; }
+function closeLB(){ lb.style.display='none'; lbImg.src=""; document.body.style.overflow=''; }
+function bindZoom(imgEl){ imgEl.addEventListener('click', ()=>openLB(imgEl.src)); }
+lbIn.addEventListener('click', ()=>{ lbScale=Math.min(5, lbScale+0.2); lbImg.style.transform=`scale(${lbScale})`; });
+lbOut.addEventListener('click', ()=>{ lbScale=Math.max(1, lbScale-0.2); lbImg.style.transform=`scale(${lbScale})`; });
+lbReset.addEventListener('click', ()=>{ lbScale=1; lbImg.style.transform=`scale(1)`; });
+lbClose.addEventListener('click', closeLB);
+lb.addEventListener('click', (e)=>{ if(e.target===lb) closeLB(); });
+
+/* ---------- WhatsApp ---------- */
 function buildWaHref(p, sizeLabel, price){
   const lines = [
     "היי! מעוניין/ת בבושם:",
@@ -388,7 +443,7 @@ function buildWaHref(p, sizeLabel, price){
   return `https://wa.me/${WA_PHONE}?text=${encodeURIComponent(lines)}`;
 }
 
-/* ---- render ---- */
+/* ---------- render ---------- */
 const selectedById = {};
 function renderProducts(list){
   const el=document.getElementById('products'); const empty=document.getElementById('empty');
@@ -397,7 +452,8 @@ function renderProducts(list){
   el.innerHTML = list.map(p=>{
     const vol100 = p.price["100"];
     const t1 = p.dupeTitle;
-    const t2 = `${p.inspStr ? `בהשראת <span class="insp">${p.inspStr}</span>` : ""}${p.genderText ? ` <span class="sep">|</span> ${p.genderText}` : ""}`;
+    const t2 = p.inspStr ? `בהשראת <span class="insp">${p.inspStr}</span>` : "";
+    const t3 = p.genderText || "";
     return `
       <article class="card" data-id="${p.id}">
         <div class="imagebox"></div>
@@ -410,6 +466,7 @@ function renderProducts(list){
         <div class="title">
           <div class="t1">${t1}</div>
           <div class="t2">${t2}</div>
+          <div class="t3">${t3}</div>
         </div>
 
         <div class="size-row">
@@ -457,7 +514,7 @@ function renderProducts(list){
   });
 }
 
-/* ---- filters ---- */
+/* ---------- filters ---------- */
 function unique(list, getter){ return Array.from(new Set(list.map(getter).filter(Boolean))); }
 function renderBrandOptions(list){
   const sel=document.getElementById('f-brand'); const prev=sel.value;
@@ -484,7 +541,7 @@ function applyFilters(all){
   renderProducts(list);
 }
 
-/* ---- map row ---- */
+/* ---------- map row ---------- */
 function mapRow(row, idx){
   const longTitleRaw = (row["שם מלא כותרת"]||row["Title"]||row["name"]||"").trim();
   const parsed = parseFromLongTitle(longTitleRaw);
@@ -506,7 +563,7 @@ function mapRow(row, idx){
   };
 }
 
-/* ---- init ---- */
+/* ---------- init ---------- */
 function initTopWA(){
   const waTop=document.getElementById('waTop');
   if(waTop) waTop.href=`https://wa.me/${WA_PHONE}?text=${encodeURIComponent('היי! מעוניין/ת בבשמים. אשמח לפרטים על נפחים ודוגמיות.')}`;
